[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devbroom"
dynamic = ["version"]
description = "Clean development dependency folders (node_modules, virtual envs) to reclaim disk space."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[tool.setuptools.dynamic]
version = { attr = "devbroom.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["devbroom*"]

[project.scripts]
devbroom = "devbroom.app:main"
