[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "devbroom"
dynamic = ["version"]
description = "Clean development dependency folders (node_modules, virtual envs) to reclaim disk space."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
  "Topic :: System :: Filesystems",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/Sandhu93/devBroom"
Source = "https://github.com/Sandhu93/devBroom"
"Bug Tracker" = "https://github.com/Sandhu93/devBroom/issues"

[tool.setuptools.dynamic]
version = { attr = "devbroom.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["devbroom*"]

[project.scripts]
devbroom = "devbroom.app:main"
